# mysql-audit

./: CMakeLists.txt  ChangeList  README  audit.cc  audit_config.c  audit_config.h  common.c
etc/: audit.cnf  audit.ini
file/: audit_file.cc
include/: audit.h  audit_file.h  audit_table.h  common.h
script/: audit.sql  audit_build.sh
table/: audit_table.cc
test/: CMakeLists.txt  check_result.c  check_result.h  db_util.c  db_util.h  main.c  test_connection.c  test_connection.h  test_dcl.c  test_dcl.h  test_ddl.c  test_ddl.h  test_dml.c  test_dml.h  test_password.c  test_password.h  test_server.c  test_server.h  util.c  util.h
